# pyrepo

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.rst  TODO.md  pyproject.toml  setup.cfg  tox.ini  variables.md
.github/workflows/: test.yml
migrations/: 0001-black-lint.py  0002-isort.py  0003-pypy-versions.py  0004-hatch.py  0005-inline-badges.py  0006-pep639.py  black-lint.py  isort.py
pyrepo/: __init__.py  __main__.py  changelog.py  config.py  gh.py  init.py  inspect_project.py  inspecting.py  mkgithub.py  pyrelease.py  readme.py  release.py  util.py
pyrepo/commands/: init.py  inspect.py  make.py  mkgithub.py  release.py  template.py
pyrepo/templates/: .travis.yml  .travis.yml.j2  LICENSE  README.rst  README.rst.j2  init.j2  setup.cfg  setup.cfg.j2  setup.py  tox.ini.j2  variables.md
pyrepo/templates/.github/workflows/: test.yml.j2
pyrepo/templates/docs/: conf.py  conf.py.j2  requirements.txt.j2
scripts/: mkpyrepo.sh  pyrelease.py  pyrelease.sh
src/pyrepo/: __init__.py  __main__.py  changelog.py  clack.py  config.py  details.py  gh.py  git.py  inspecting.py  project.py  readme.py  tmpltr.py  util.py
src/pyrepo/commands/: add_ci_testenv.py  add_pyversion.py  add_typing.py  begin_dev.py  drop_pyversion.py  init.py  inspect.py  make.py  mkgithub.py  release.py  template.py  unflatten.py
src/pyrepo/templates/: README.rst.j2  init.j2  pyproject.toml.j2  setup.cfg.j2  tox.ini.j2  variables.md
src/pyrepo/templates/docs/: conf.py.j2  index.rst.j2
templates/: .travis.yml  LICENSE  README.rst  setup.cfg  setup.py  tox.ini  {{import_name}}.py
templates/docs/: conf.py
test/: conftest.py  test_changelog.py  test_clack.py  test_cli_add_ci_testenv.py  test_cli_add_typing.py  test_cli_init.py  test_cli_unflatten.py  test_details.py  test_git.py  test_helpers.py  test_inspect_project.py  test_project.py  test_readme.py  test_util.py
test/data/: config.cfg  config.toml
test/data/add_ci_testenv/doctests-plus-typing/: args.txt
test/data/add_ci_testenv/typing-plus-dogfood/: args.txt
test/data/add_pyversion/after/: CHANGELOG.md  pyproject.toml  setup.cfg  tox.ini
test/data/add_pyversion/before/: CHANGELOG.md  README.rst  pyproject.toml
test/data/advance_devstatus/normal/: after.cfg
test/data/changelog/: big-sections.json  big-sections.md  date-versioned.json  date-versioned.md  dev-sect-empty.json  dev-sect-empty.md  empty.json  in-development.json  in-development.md  one-section.json  one-section.md  two-sections.json  two-sections.md  with-intro.json
test/data/drop_pyversion/after/: CHANGELOG.md  README.rst  pyproject.toml  setup.cfg  tox.ini
test/data/drop_pyversion/before/: README.rst  pyproject.toml  setup.cfg  tox.ini
test/data/extract_requires/both/: before.py  variables.json
test/data/extract_requires/neither/: variables.json
test/data/extract_requires/pyrequires/: before.py  variables.json
test/data/extract_requires/requires/: variables.json
test/data/inspect_project/command-flat/: _inspect.json  foobar.py  pyproject.toml  setup.cfg
test/data/inspect_project/docs-custom-rtfd/: README.rst  _inspect.json  pyproject.toml  setup.cfg
test/data/inspect_project/flat-noreq/: _inspect.json  pyproject.toml
test/data/inspect_project/flat-req/: _inspect.json  pyproject.toml  setup.cfg  setup.py
test/data/inspect_project/has-ci/: README.rst  _inspect.json  foobar.py  tox.ini
test/data/inspect_project/has-ci-typing/: README.rst  _inspect.json  pyproject.toml  setup.cfg  tox.ini
test/data/inspect_project/has-docs/: README.rst  _inspect.json  pyproject.toml  setup.cfg
test/data/inspect_project/has-docs-tests/: .gitignore  README.rst  _inspect.json  pyproject.toml  tox.ini
test/data/inspect_project/has-pypi/: README.rst  _inspect.json  setup.cfg
test/data/inspect_project/has-tests/: README.rst  _inspect.json  pyproject.toml  tox.ini
test/data/inspect_project/has-travis/: README.rst  _inspect.json
test/data/inspect_project/keywords/: _inspect.json  pyproject.toml  setup.cfg
test/data/inspect_project/no-pyproject/: _errmsg.txt  setup.cfg
test/data/inspect_project/no-saythanks-to/: README.rst  _inspect.json  pyproject.toml  setup.cfg
test/data/inspect_project/no-setup-cfg/: _errmsg.txt
test/data/inspect_project/no-setup-py/: _errmsg.txt
test/data/inspect_project/no-src/: LICENSE  _errmsg.txt
test/data/inspect_project/nokeywords/: README.rst  _inspect.json  setup.cfg
test/data/inspect_project/nonflat-noreq/: _inspect.json  pyproject.toml  setup.cfg
test/data/inspect_project/pyreq-py2/: README.rst  _inspect.json  pyproject.toml  setup.cfg
test/data/inspect_project/variant-strs/: LICENSE  _inspect.json  foobar.py  pyproject.toml  setup.cfg
test/data/inspect_project/variant-strs/src/: foobar.py
test/data/parse_requirements/: both.json  both.txt  empty.json  pyreq.json  requirements.json  requirements.txt
test/data/pyrepo_init/coding-comment/after/: foobar.py  setup.cfg
test/data/pyrepo_init/coding-comment/after/src/: foobar.py
test/data/pyrepo_init/command-noflat/after/: pyproject.toml  setup.cfg
test/data/pyrepo_init/command-noflat/after/foobar/: __init__.py
test/data/pyrepo_init/command-noflat/after/src/foobar/: __init__.py  __main__.py
test/data/pyrepo_init/hyphenmix01/after/: README.rst  foo_bar.py  pyproject.toml  setup.cfg
test/data/pyrepo_init/hyphenmix01/after/src/: foo_bar.py
test/data/pyrepo_init/nonflat-tests-typing/after/: README.rst  pyproject.toml  setup.cfg  tox.ini
test/data/pyrepo_init/nonflat-typing/after/: pyproject.toml  setup.cfg  tox.ini
test/data/pyrepo_init/pyreq-cfg/after/: README.rst  pyproject.toml  setup.cfg
test/data/pyrepo_init/pyreq-opt-override-mismatch/after/: README.rst  pyproject.toml  setup.cfg
test/data/pyrepo_init/template-opts/after/: README.rst  pyproject.toml  setup.cfg  tox.ini
test/data/pyrepo_init/template-opts/after/docs/: conf.py  index.rst
test/data/pyrepo_init/template-opts/after/src/: foobar.py
test/data/readme/: contents.json  contents.rst  no-intro.json  no-intro.rst  no-sections.json  no-sections.rst  readme.json
(+275 files in other folders)
