[metadata]
name = jwodder-pyrepo
version = attr:pyrepo.__version__
description = Python repository packager & releaser
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = pyrepo@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/pyrepo

keywords =
    github
    packaging
    pypi
    setuptools

classifiers =
    Private :: Keep Off PyPI
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Version Control :: Git
    Topic :: System :: Software Distribution
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/pyrepo
    Bug Tracker = https://github.com/jwodder/pyrepo/issues

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = ~=3.8
install_requires =
    attrs          >= 18.1
    build          ~= 0.1
    click          ~= 7.0
    click-loglevel ~= 0.2
    colorlog       >= 4.6, < 7.0
    in_place       ~= 0.4
    intspan        ~= 1.6
    Jinja2         ~= 3.0
    lineinfile     ~= 0.1
    linesep        ~= 0.3
    packaging      >= 17.1
    pydantic       ~= 1.7
    pyversion-info ~= 0.2
    PyYAML         ~= 5.0
    read_version   ~= 0.1
    requests       ~= 2.20
    setuptools     >= 46.4.0
    twine          ~= 3.3
    uritemplate    ~= 3.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyrepo = pyrepo.__main__:main

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
exclude = test/data/
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
