[metadata]
name = jwodder-pyrepo
#version = # Set by versioningit
description = Python repository templater & releaser
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = pyrepo@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/pyrepo

keywords =
    github
    packaging
    pypi
    setuptools

classifiers =
    Private :: Keep Off PyPI
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Version Control :: Git
    Topic :: System :: Software Distribution
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/pyrepo
    Bug Tracker = https://github.com/jwodder/pyrepo/issues

[options]
packages = find_namespace:
package_dir =
    =src
include_package_data = True
python_requires = >=3.8
install_requires =
    build          ~= 1.0
    cattrs         >= 22.2.0
    click          ~= 8.0
    click-loglevel ~= 0.2
    configupdater  ~= 3.1
    colorlog       ~= 6.0
    ghtoken        ~= 0.1
    in_place       ~= 0.4
    intspan        ~= 1.6
    Jinja2         ~= 3.0
    lineinfile     ~= 0.1
    linesep        ~= 0.3
    packaging      >= 17.1
    pyversion-info ~= 1.0
    read_version   ~= 0.1
    requests       ~= 2.20
    ruamel.yaml    >= 0.15, < 1.0
    setuptools     >= 61.0.0
    tomli          >= 1.2, < 3.0; python_version < "3.11"
    twine          ~= 4.0
    uritemplate    ~= 3.0
    versioningit   >= 1.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyrepo = pyrepo.__main__:main

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
exclude = test/data/
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True

[mypy-configupdater]
implicit_reexport = True
