[aliases]
make = sdist bdist_wheel

{% if py2 %}
[bdist_wheel]
universal = 1

{% endif %}
{% if importable %}
[metadata]
name = {{project_name}}
version = attr:{{import_name}}.__version__
description = {{short_description}}
long_description = file:README.rst
author = {{author}}
author_email = {{email_username}}@{{email_hostname}}
license = MIT
license_file = LICENSE
url = https://github.com/jwodder/{{repo_name}}

keywords =
    ###

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
{% if py2 %}
    Programming Language :: Python :: 2
{% for v in py2_versions %}
    Programming Language :: Python :: {{v}}
{% endfor %}
{% else %}
    Programming Language :: Python :: 3 :: Only
{% endif %}
    Programming Language :: Python :: 3
{% for v in py3_versions %}
    Programming Language :: Python :: {{v}}
{% endfor %}
    Programming Language :: Python :: Implementation :: CPython
{% if py2 %}
    Programming Language :: Python :: Implementation :: PyPy
{% endif %}
    License :: OSI Approved :: MIT License
    ###

[options]
{% if is_flat_module %}
py_modules = {{import_name}}
{% else %}
packages = find:
{% endif %}
python_requires = {{python_requires}}
install_requires =

[options.entry_points]
console_scripts =
{% else %}
[metadata]
license_file = LICENSE
{% endif %}
