[aliases]
make = sdist bdist_wheel

[metadata]
name = {{project_name}}
{% if importable %}
version = attr:{{import_name}}.__version__
{% else %}
#version = # Set in setup.py
{% endif %}
description = {{short_description}}
long_description = file:README.rst
long_description_content_type = text/x-rst
author = {{author}}
author_email = {{author_email}}
license = MIT
license_file = LICENSE
url = https://github.com/jwodder/{{repo_name}}

keywords =
    ###

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
{% for v in python_versions %}
    Programming Language :: Python :: {{v}}
{% endfor %}
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    ###

project_urls =
    Source Code = https://github.com/jwodder/{{repo_name}}
    Bug Tracker = https://github.com/jwodder/{{repo_name}}/issues
    {% if has_docs %}
    Documentation = https://{{rtfd_name}}.readthedocs.io
    {% endif %}
    Say Thanks! = https://saythanks.io/to/jwodder

[options]
{% if is_flat_module %}
py_modules = {{import_name}}
{% else %}
packages = find:
{% endif %}
python_requires = {{python_requires}}
{% if install_requires %}
install_requires =
    {% for req in install_requires %}
    {{req}}
    {% endfor %}
{% endif %}
{% if commands %}

[options.entry_points]
console_scripts =
    {% for name, ep in commands.items() %}
    {{name}} = {{ep}}
    {% endfor %}
{% endif %}
