[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foobar"
dynamic = ["version"]
description = "A project"
readme = "README.rst"
requires-python = "~=3.4"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "foobar@varonathe.org" }
]

keywords = [
    "foo",
    "bar",
    "baz glarch",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]

dependencies = []

[project.urls]
"Source Code" = "https://github.com/jwodder/foobar"
"Bug Tracker" = "https://github.com/jwodder/foobar/issues"
"Say Thanks!" = "https://saythanks.io/to/jwodder"

[tool.hatch.version]
path = "foobar.py"

[tool.hatch.build.targets.sdist]
include = [
    "/foobar.py",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"
