[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-foo_bar"
dynamic = ["version"]
description = "This is a project description."
readme = "README.rst"
requires-python = "~=3.4"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "Joe Q. Coder", email = "jcoder@example.com" }
]

keywords = [
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]

dependencies = []

[project.urls]
"Source Code" = "https://github.com/jcoder/foobar.py"
"Bug Tracker" = "https://github.com/jcoder/foobar.py/issues"
"Say Thanks!" = "https://saythanks.io/to/jqcoder"

[tool.hatch.version]
path = "foobar.py"

[tool.hatch.build.targets.sdist]
include = [
    "/foobar.py",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"
