[aliases]
make = sdist bdist_wheel

[metadata]
name = py-foo_bar
version = attr:foobar.__version__
description = This is a project description.
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Joe Q. Coder
author_email = jcoder@example.com
license = MIT
license_files = LICENSE
url = https://github.com/jcoder/foobar.py

keywords =
    ###

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    ###

project_urls =
    Source Code = https://github.com/jcoder/foobar.py
    Bug Tracker = https://github.com/jcoder/foobar.py/issues
    Say Thanks! = https://saythanks.io/to/jqcoder

[options]
py_modules = foobar
package_dir =
    =src
python_requires = ~=3.4
