[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foobar"
dynamic = ["version"]
description = "A project"
readme = "README.rst"
requires-python = ">=3.5"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "foobar@varonathe.org" }
]

keywords = [
    ###
]

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    ###
]

dependencies = []

[project.scripts]
foobar = "foobar.__main__:main"

[project.urls]
"Source Code" = "https://github.com/jwodder/foobar"
"Bug Tracker" = "https://github.com/jwodder/foobar/issues"

[tool.hatch.version]
path = "src/foobar/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"
