[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foo-bar"
dynamic = ["version"]
description = "A project"
readme = "README.rst"
requires-python = ">=3.5"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "foo-bar@varonathe.org" }
]

keywords = [
    ###
]

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    ###
]

dependencies = []

[project.urls]
"Source Code" = "https://github.com/jwodder/foo-bar"
"Bug Tracker" = "https://github.com/jwodder/foo-bar/issues"

[tool.hatch.version]
path = "foo_bar.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/foo_bar.py",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]
