[aliases]
make = sdist bdist_wheel

[metadata]
name = foobar
version = attr:foobar.__version__
description = A project
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = foobar@varonathe.org
license = MIT
license_file = LICENSE
url = https://github.com/jwodder/foobar

keywords =
    ###

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    ###

project_urls =
    Source Code = https://github.com/jwodder/foobar
    Bug Tracker = https://github.com/jwodder/foobar/issues
    Say Thanks! = https://saythanks.io/to/jwodder

[options]
py_modules = foobar
python_requires = ~= 3.6
